scripts/tests/phase1_snapshots/invalid_attribute.contracts.txt
examples/contract_negatives/invalid_attribute/src/main.con:5:25: error[parse]: (E0001) expected a string literal in proof_fingerprint("…")
 5 |     #[proof_fingerprint(12345)]
   |                         ^
